# fanqie-novel-lab

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DATA_POLICY.md  DEVELOPMENT.md  FAQ.md  OPEN_SOURCE_CHECKLIST.md  RELEASE.md  TROUBLESHOOTING.md  WINDOWS.md  WORKFLOW.md
electron-client/: main.js  package-lock.json  package.json
sample_data/: fanqie_metadata_template.csv
scripts/: run_app.ps1  run_app.sh  run_electron.ps1  run_electron.sh  setup.ps1  setup.sh
site/novel/: index.html
src/fanqie_novel_lab/: app.py  cli.py  config.py  db.py  io_utils.py  llm.py  model_profiles.py  prompts.py  schemas.py  writing_skills.py
src/fanqie_novel_lab/crawler/: fanqie_public.py  font_decoder.py
src/fanqie_novel_lab/services/: chapter_generator.py  chapter_reviewer.py  collision_reviewer.py  open_source_readiness.py  outline_generator.py  publisher.py  quality_control.py  similarity_guard.py  trend_analyzer.py
tests/: test_smoke.py
